# Algos_Evidencia2

./: .gitignore  CMakeLists_8txt.html  LICENSE  README.md  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  null_8cpp.html  parte__1_8h.html  parte__1_8h__incl.dot  parte__1_8h_source.html  parte__2_8h.html  parte__2_8h__incl.dot  parte__2_8h_source.html  parte__3_8h.html  parte__3_8h__incl.dot  parte__3_8h_source.html  parte__4_8h.html  parte__4_8h__incl.dot  parte__4_8h_source.html  sonar-project.properties  structEdge-members.html  structEdge.html
.github/workflows/: build.yml  ubuntu.yml
app/: CMakeLists.txt  input.txt  main.cpp
search/: all_0.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
src/: CMakeLists.txt  null.cpp  parte_1.h  parte_2.h  parte_3.h  parte_4.h
tests/: CMakeLists.txt  tests.cc
tools/: run-clang-tidy.py
